log/tools/arch/s390/include/uapi/asm/bpf_perf_event.h.log
commit c682ccc4962a8fab949e1f2d7325b3e825dbf6d1
Author: Hendrik Brueckner <brueckner@linux.vnet.ibm.com>
Date:   Mon Dec 18 14:09:57 2017 +0100

    bpf: fix broken BPF selftest build on s390
    
    With 720f228e8d31 ("bpf: fix broken BPF selftest build") the
    inclusion of arch-specific header files changed.  Including the
    asm/bpf_perf_event.h on s390, correctly includes the s390 specific
    header file.  This header file tries then to include the s390
    asm/ptrace.h and the build fails with:
    
    cc -Wall -O2 -I../../../include/uapi -I../../../lib -I../../../../include/generated  -I../../../include    test_verifier.c
    +/root/git/linux/tools/testing/selftests/bpf/libbpf.a /root/git/linux/tools/testing/selftests/bpf/cgroup_helpers.c -lcap -lelf -o
    +/root/git/linux/tools/testing/selftests/bpf/test_verifier
    In file included from ../../../include/uapi/asm/bpf_perf_event.h:4:0,
                     from ../../../include/uapi/linux/bpf_perf_event.h:11,
                     from test_verifier.c:29:
    ../../../include/uapi/../../arch/s390/include/uapi/asm/bpf_perf_event.h:7:9: error: unknown type name 'user_pt_regs'
     typedef user_pt_regs bpf_user_pt_regs_t;
             ^~~~~~~~~~~~
    make: *** [../lib.mk:109: /root/git/linux/tools/testing/selftests/bpf/test_verifier] Error 1
    
    This is caused by a recent update to the s390 asm/ptrace.h file
    that is not (yet) available in the local installation.  That means,
    the s390 asm/ptrace.h must be included from the tools/arch/s390
    directory.
    
    Because there is no proper framework to deal with asm specific
    includes in tools/, slightly modify the s390 asm/bpf_perf_event.h
    to include the local ptrace.h header file.
    
    See also discussion on
    https://marc.info/?l=linux-s390&m=151359424420691&w=2
    
    Please note that this needs to be preserved until tools/ is able to
    correctly handle asm specific headers.
    
    References: https://marc.info/?l=linux-s390&m=151359424420691&w=2
    Fixes: 720f228e8d31 ("bpf: fix broken BPF selftest build")
    Signed-off-by: Hendrik Brueckner <brueckner@linux.vnet.ibm.com>
    Cc: Daniel Borkmann <daniel@iogearbox.net>
    Cc: Hendrik Brueckner <brueckner@linux.vnet.ibm.com>
    Cc: Arnaldo Carvalho de Melo <acme@kernel.org>
    Cc: Alexei Starovoitov <ast@kernel.org>
    Signed-off-by: Daniel Borkmann <daniel@iogearbox.net>

diff --git a/tools/arch/s390/include/uapi/asm/bpf_perf_event.h b/tools/arch/s390/include/uapi/asm/bpf_perf_event.h
index cefe7c7cd4f6..0a8e37a519f2 100644
--- a/tools/arch/s390/include/uapi/asm/bpf_perf_event.h
+++ b/tools/arch/s390/include/uapi/asm/bpf_perf_event.h
@@ -2,7 +2,7 @@
 #ifndef _UAPI__ASM_BPF_PERF_EVENT_H__
 #define _UAPI__ASM_BPF_PERF_EVENT_H__
 
-#include <asm/ptrace.h>
+#include "ptrace.h"
 
 typedef user_pt_regs bpf_user_pt_regs_t;
 

commit 618e165b2a8e10765dd2a4f9866d118a474f0faf
Author: Hendrik Brueckner <brueckner@linux.vnet.ibm.com>
Date:   Mon Dec 4 10:56:48 2017 +0100

    selftests/bpf: sync kernel headers and introduce arch support in Makefile
    
    Synchronize the uapi kernel header files which solves the broken
    uapi export of pt_regs.  Because of arch-specific uapi headers,
    extended the include path in the Makefile.
    
    With this change, the test_verifier program compiles and runs successfully
    on s390.
    
    Signed-off-by: Hendrik Brueckner <brueckner@linux.vnet.ibm.com>
    Reviewed-and-tested-by: Thomas Richter <tmricht@linux.vnet.ibm.com>
    Acked-by: Alexei Starovoitov <ast@kernel.org>
    Cc: Daniel Borkmann <daniel@iogearbox.net>
    Cc: Shuah Khan <shuah@kernel.org>
    Signed-off-by: Daniel Borkmann <daniel@iogearbox.net>

diff --git a/tools/arch/s390/include/uapi/asm/bpf_perf_event.h b/tools/arch/s390/include/uapi/asm/bpf_perf_event.h
new file mode 100644
index 000000000000..cefe7c7cd4f6
--- /dev/null
+++ b/tools/arch/s390/include/uapi/asm/bpf_perf_event.h
@@ -0,0 +1,9 @@
+/* SPDX-License-Identifier: GPL-2.0 */
+#ifndef _UAPI__ASM_BPF_PERF_EVENT_H__
+#define _UAPI__ASM_BPF_PERF_EVENT_H__
+
+#include <asm/ptrace.h>
+
+typedef user_pt_regs bpf_user_pt_regs_t;
+
+#endif /* _UAPI__ASM_BPF_PERF_EVENT_H__ */
